--- a/Noita_LuaLoader/Noita_LuaLoader.vcxproj.filters
+++ b/Noita_LuaLoader/Noita_LuaLoader.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
