--- a/Noita_LuaLoader/Noita_LuaLoader.vcxproj.filters
+++ b/Noita_LuaLoader/Noita_LuaLoader.vcxproj.filters
@@ -20,6 +20,9 @@
     <ClInclude Include="Engine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WizardFile.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -32,6 +35,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="proxy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WizardFile.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
